add new test to use aes keywrap and EC-DH key agreement for data and key encryption between idp and sp

--- a/dev/com.ibm.ws.security.saml.sso_fat.common/test-applications/samlclient.war/resources/WEB-INF/web.xml
+++ b/dev/com.ibm.ws.security.saml.sso_fat.common/test-applications/samlclient.war/resources/WEB-INF/web.xml
@@ -170,6 +170,10 @@
 		<servlet-name>SnoopServlet</servlet-name>
 		<url-pattern>/fat/sp_enc_aes128/snoop</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping id="ServletMapping_Snoop_spAES128_nosignature">
+		<servlet-name>SnoopServlet</servlet-name>
+		<url-pattern>/fat/sp_enc_aes128_no_sign/snoop</url-pattern>
+	</servlet-mapping>
 	<servlet-mapping id="ServletMapping_Snoop_spAES128a">
 		<servlet-name>SnoopServlet</servlet-name>
 		<url-pattern>/fat/sp_enc_aes128/snoop/*</url-pattern>
