--- a/.ci-orchestrator/steps/compileFATs.yml
+++ b/.ci-orchestrator/steps/compileFATs.yml
@@ -1,11 +1,21 @@
 - stepName: Compile FATs
   workType: RTC
   timeoutInMinutes: 1440
+  dependsOn:
+    - stepName: OL SHA
+      awaitOutputProperties: true
+    - stepName: WL SHA
+      awaitOutputProperties: true
+    - stepName: Launcher SHA
+      awaitOutputProperties: true
   properties:
     build.stub.target: build.CachedWSCD.CompileFATs
     # Do not create IM buckets in this step because some require an image to compile,
     # so they are built in the Compile Liberty Images step.
     create.im.repo: false
+    git.clone.checkout.commit: ${WL SHA:commitSHA}
+    git.laos.clone.checkout.commit: ${OL SHA:commitSHA}
+    git.launcher.clone.checkout.commit: ${Launcher SHA:commitSHA}
     personal.im.build: false
   includeProperties:
     - file: compile.properties
