--- a/.ci-orchestrator/steps/unittestOpenLiberty.yml
+++ b/.ci-orchestrator/steps/unittestOpenLiberty.yml
@@ -1,7 +1,17 @@
 - stepName: Unittest Open Liberty
   workType: RTC
+  dependsOn:
+    - stepName: OL SHA
+      awaitOutputProperties: true
+    - stepName: WL SHA
+      awaitOutputProperties: true
+    - stepName: Launcher SHA
+      awaitOutputProperties: true
   timeoutInMinutes: 1440
   properties:
     build.stub.target: build.CachedWSCD.OLTest
+    git.clone.checkout.commit: ${WL SHA:commitSHA}
+    git.laos.clone.checkout.commit: ${OL SHA:commitSHA}
+    git.launcher.clone.checkout.commit: ${Launcher SHA:commitSHA}
   includeProperties:
     - file: compile.properties
