--- a/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
+++ b/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
@@ -169,7 +169,7 @@
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
-      <version>32.0.1-android</version>
+      <version>32.0.1-jre</version>
     </dependency>
     <dependency>
       <groupId>com.google.inject</groupId>
@@ -465,6 +465,11 @@
       <groupId>io.dropwizard.metrics</groupId>
       <artifactId>metrics-core</artifactId>
       <version>4.1.5</version>
+    </dependency>
+    <dependency>
+      <groupId>io.dropwizard.metrics</groupId>
+      <artifactId>metrics-core</artifactId>
+      <version>4.2.25</version>
     </dependency>
     <dependency>
       <groupId>io.github.classgraph</groupId>
@@ -1955,6 +1960,11 @@
       <groupId>net.shibboleth.utilities</groupId>
       <artifactId>java-support</artifactId>
       <version>7.5.1</version>
+    </dependency>
+    <dependency>
+      <groupId>net.shibboleth.utilities</groupId>
+      <artifactId>java-support</artifactId>
+      <version>8.4.2</version>
     </dependency>
     <dependency>
       <groupId>net.sourceforge.cssparser</groupId>
@@ -4358,8 +4368,18 @@
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
+      <artifactId>opensaml-core</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opensaml</groupId>
       <artifactId>opensaml-messaging-api</artifactId>
       <version>3.4.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opensaml</groupId>
+      <artifactId>opensaml-messaging-api</artifactId>
+      <version>4.3.2</version>
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
@@ -4368,8 +4388,18 @@
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
+      <artifactId>opensaml-messaging-impl</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opensaml</groupId>
       <artifactId>opensaml-profile-api</artifactId>
       <version>3.4.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opensaml</groupId>
+      <artifactId>opensaml-profile-api</artifactId>
+      <version>4.3.2</version>
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
@@ -4378,8 +4408,18 @@
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
+      <artifactId>opensaml-profile-impl</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opensaml</groupId>
       <artifactId>opensaml-saml-api</artifactId>
       <version>3.4.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opensaml</groupId>
+      <artifactId>opensaml-saml-api</artifactId>
+      <version>4.3.2</version>
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
@@ -4388,8 +4428,18 @@
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
+      <artifactId>opensaml-saml-impl</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opensaml</groupId>
       <artifactId>opensaml-security-api</artifactId>
       <version>3.4.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opensaml</groupId>
+      <artifactId>opensaml-security-api</artifactId>
+      <version>4.3.2</version>
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
@@ -4398,8 +4448,18 @@
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
+      <artifactId>opensaml-security-impl</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opensaml</groupId>
       <artifactId>opensaml-soap-api</artifactId>
       <version>3.4.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opensaml</groupId>
+      <artifactId>opensaml-soap-api</artifactId>
+      <version>4.3.2</version>
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
@@ -4408,8 +4468,18 @@
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
+      <artifactId>opensaml-soap-impl</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opensaml</groupId>
       <artifactId>opensaml-storage-api</artifactId>
       <version>3.4.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opensaml</groupId>
+      <artifactId>opensaml-storage-api</artifactId>
+      <version>4.3.2</version>
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
@@ -4418,8 +4488,18 @@
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
+      <artifactId>opensaml-storage-impl</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opensaml</groupId>
       <artifactId>opensaml-xacml-api</artifactId>
       <version>3.4.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opensaml</groupId>
+      <artifactId>opensaml-xacml-api</artifactId>
+      <version>4.3.2</version>
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
@@ -4428,8 +4508,18 @@
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
+      <artifactId>opensaml-xacml-impl</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opensaml</groupId>
       <artifactId>opensaml-xacml-saml-api</artifactId>
       <version>3.4.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opensaml</groupId>
+      <artifactId>opensaml-xacml-saml-api</artifactId>
+      <version>4.3.2</version>
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
@@ -4438,13 +4528,28 @@
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
+      <artifactId>opensaml-xacml-saml-impl</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opensaml</groupId>
       <artifactId>opensaml-xmlsec-api</artifactId>
       <version>3.4.5</version>
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
+      <artifactId>opensaml-xmlsec-api</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opensaml</groupId>
       <artifactId>opensaml-xmlsec-impl</artifactId>
       <version>3.4.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.opensaml</groupId>
+      <artifactId>opensaml-xmlsec-impl</artifactId>
+      <version>4.3.2</version>
     </dependency>
     <dependency>
       <groupId>org.osgi</groupId>
