Enable Spring-4.0 Transactions WAR Tests

--- a/dev/io.openliberty.springboot.fat40.transactions.app/build.gradle
+++ b/dev/io.openliberty.springboot.fat40.transactions.app/build.gradle
@@ -27,7 +27,13 @@ dependencies {
   implementation('org.springframework.boot:spring-boot-starter-web')
   implementation('org.springframework.boot:spring-boot-starter-jdbc')
 
-  providedCompile 'org.springframework.boot:spring-boot-starter-tomcat'}
+  // Should use spring-boot-starter-tomcat as provideCompile, but gradle plugin
+  // is putting too much in lib-provided: see https://github.com/spring-gradle-plugins/dependency-management-plugin/issues/409
+  // providedCompile('org.springframework.boot:spring-boot-starter-tomcat')
+  providedRuntime('org.apache.tomcat.embed:tomcat-embed-core')
+  providedRuntime('org.apache.tomcat.embed:tomcat-embed-el')
+  providedRuntime('org.apache.tomcat.embed:tomcat-embed-websocket')
+}
 
 bootJar {
   duplicatesStrategy 'warn'
