--- a/dev/io.openliberty.jakarta.data.1.1_fat_tck/publish/tckRunner/standalone/pom.xml
+++ b/dev/io.openliberty.jakarta.data.1.1_fat_tck/publish/tckRunner/standalone/pom.xml
@@ -26,6 +26,7 @@
 		<targetDirectory>${project.basedir}/target</targetDirectory>
 	</properties>
 
+    <!-- TODO update all APIs to EE 12 -->
 	<dependencies>
 		<!-- tck - data - external TCK -->
 		<dependency>
