--- a/dev/io.openliberty.springboot.fat40.war.app/build.gradle
+++ b/dev/io.openliberty.springboot.fat40.war.app/build.gradle
@@ -28,10 +28,11 @@ java {
 apply from: '../wlp-gradle/subprojects/maven-central-mirror.gradle'
 
 dependencies {
-  implementation project(':io.openliberty.springboot.fat30.war.app:module')
   implementation('org.springframework.boot:spring-boot-starter-web')
-
-  providedCompile 'org.springframework.boot:spring-boot-starter-tomcat'
-  //providedCompile 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api'
-  //providedCompile 'org.apache.tomcat.embed:tomcat-embed-jasper'
+ // Should use spring-boot-starter-tomcat as provideCompile, but gradle plugin
+  // is putting too much in lib-provided: see https://github.com/spring-gradle-plugins/dependency-management-plugin/issues/409
+  // providedCompile('org.springframework.boot:spring-boot-starter-tomcat')
+  providedRuntime('org.apache.tomcat.embed:tomcat-embed-core')
+  providedRuntime('org.apache.tomcat.embed:tomcat-embed-el')
+  providedRuntime('org.apache.tomcat.embed:tomcat-embed-websocket')
 }
