fix: maven dependencies

--- a/dev/io.openliberty.jakarta.concurrency.3.2_fat_tck/publish/tckRunner/pom.xml
+++ b/dev/io.openliberty.jakarta.concurrency.3.2_fat_tck/publish/tckRunner/pom.xml
@@ -22,10 +22,24 @@
     <name>Jakarta Concurrency TCK Runner</name>
 
     <properties>
-        <arquillian.version>1.7.0.Alpha13</arquillian.version>
+    	 <!-- Global Maven settings -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.release>21</maven.compiler.release>
+        
+        <!-- Jakarta EE API -->
+        <jakarta.concurrent.tck.groupid>jakarta.enterprise.concurrent</jakarta.concurrent.tck.groupid>
+        <jakarta.concurrent.tck.version>3.2.0-SNAPSHOT</jakarta.concurrent.tck.version>
+        <jakarta.concurrent.version>3.2.0</jakarta.concurrent.version>
+        
+        <!-- Test Infrastructure versions -->
+        <arquillian.version>1.7.0.Final</arquillian.version>
+        <arquillian.wlp.version>2.1.3</arquillian.wlp.version>
+        <junit.version>5.10.0</junit.version>
+        <sigtest.version>2.3</sigtest.version>
     </properties>
 
     <modules>
@@ -40,6 +54,13 @@
                 <version>${arquillian.version}</version>
                 <scope>import</scope>
                 <type>pom</type>
+            </dependency>
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>${junit.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
