--- a/dev/com.ibm.ws.jsp.2.3_fat.2/build.gradle
+++ b/dev/com.ibm.ws.jsp.2.3_fat.2/build.gradle
@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2020, 2024 IBM Corporation and others.
+ * Copyright (c) 2020, 2025 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -14,22 +14,7 @@ configurations {
 }
 
 dependencies {
-    requiredLibs project(':io.openliberty.org.apache.commons.codec'),
-      'org.apache.httpcomponents:httpclient:4.1.2',
-      'org.apache.httpcomponents:httpcore:4.1.2',
-      'httpunit:httpunit:1.5.4'
-    }
-
-
-task copyFeatureBundle(type: Copy) {
-  dependsOn jar
-  from buildDir
-  into new File(autoFvtDir, 'lib/LibertyFATTestFiles/bundles')
-  include 'io.openliberty.test.tld.jar'
-}
-
-autoFVT {
-  dependsOn copyFeatureBundle
+    requiredLibs 'httpunit:httpunit:1.5.4'
 }
 
 addRequiredLibraries.dependsOn addJakartaTransformer
