--- a/dev/com.ibm.ws.kernel.feature_fat/.classpath
+++ b/dev/com.ibm.ws.kernel.feature_fat/.classpath
@@ -17,6 +17,7 @@
 	<classpathentry kind="src" output="bin" path="fat/src"/>
 	<classpathentry kind="src" path="test-bundles/test.feature.fix.manager/src"/>
 	<classpathentry kind="src" path="test-bundles/test.active.condition/src"/>
+	<classpathentry kind="src" path="test-bundles/test.startphase.condition/src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="module" value="true"/>
