--- a/dev/io.openliberty.springboot.fat40_fat/build.gradle
+++ b/dev/io.openliberty.springboot.fat40_fat/build.gradle
@@ -91,7 +91,8 @@ def appDefs =
     [ 'io.openliberty.springboot.fat40.mbean.app', '.war'],
     [ 'io.openliberty.springboot.fat40.jms.app', '.war'],
     [ 'io.openliberty.springboot.fat40.transactions.app', '.war'],
-    [ 'io.openliberty.springboot.fat40.data.app', '.war']]
+    [ 'io.openliberty.springboot.fat40.data.app', '.war'],
+    [ 'io.openliberty.springboot.fat40.validation.app', '.war']]
 
 autoFVT.dependsOn ':wlp.lib.extract:build'
 appDefs.each { appDef ->
