--- a/dev/io.openliberty.org.apache.myfaces.4.1_fat/.classpath
+++ b/dev/io.openliberty.org.apache.myfaces.4.1_fat/.classpath
@@ -6,6 +6,7 @@
     <classpathentry kind="src" path="test-applications/uuidConverter_Spec1819.war/src"/>
     <classpathentry kind="src" path="test-applications/ViewScopeEvents_Spec1739.war/src"/>
     <classpathentry kind="src" path="test-applications/rowStatePreserved_Spec1263.war/src"/>
+    <classpathentry kind="src" path="test-applications/ExpressionLanguageResolvers.war/src"/>
     <classpathentry kind="con" path="aQute.bnd.classpath.container"/>
     <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
         <attributes>
