Updates for noship / beta features with IBM APIs

--- a/dev/wlp-gradle/subprojects/tasks.gradle
+++ b/dev/wlp-gradle/subprojects/tasks.gradle
@@ -251,6 +251,12 @@ if (bnd.get('publish.wlp.jar.suffix', 'lib').contains('api/ibm') || bnd.get('pub
       release = release.substring(2);
     }
 
+    if (javaVersionNumVal < 21 && '21'.equals(release)) {
+      javadocTool = javaToolchains.javadocToolFor {
+        languageVersion = JavaLanguageVersion.of(21)
+      }
+    }
+
     def sp = files(bndWorkspace.getProject(project.name).getSourcePath())
     def cp = files()
     bndWorkspace.getProject(project.name)?.getBuildpath().each {
