--- a/dev/io.openliberty.springboot.fat40_fat/build.gradle
+++ b/dev/io.openliberty.springboot.fat40_fat/build.gradle
@@ -94,7 +94,8 @@ def appDefs =
     [ 'io.openliberty.springboot.fat40.data.app', '.war'],
     [ 'io.openliberty.springboot.fat40.validation.app', '.war'],
     [ 'io.openliberty.springboot.fat40.http.app', '.war'],
-    [ 'io.openliberty.springboot.fat40.http.contextroot.app', '.war']]
+    [ 'io.openliberty.springboot.fat40.http.contextroot.app', '.war'],
+    [ 'io.openliberty.springboot.fat40.aop.app', '.war']]
 
 autoFVT.dependsOn ':wlp.lib.extract:build'
 appDefs.each { appDef ->
