--- a/dev/com.ibm.ws.install.featureUtility_fat/build.gradle
+++ b/dev/com.ibm.ws.install.featureUtility_fat/build.gradle
@@ -1,49 +1,52 @@
-/* Copyright (c) 2021, 2024 IBM Corporation and others.
-* All rights reserved. This program and the accompanying materials
-* are made available under the terms of the Eclipse Public License 2.0
-* which accompanies this distribution, and is available at
-* http://www.eclipse.org/legal/epl-2.0/
- * 
+/* Copyright (c) 2021, 2025 IBM Corporation and others.
+ * All rights reserved. This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License 2.0
+ * which accompanies this distribution, and is available at
+ * http://www.eclipse.org/legal/epl-2.0/
+ *
  * SPDX-License-Identifier: EPL-2.0
-*
-* Contributors:
-*     IBM Corporation - initial API and implementation
-*******************************************************************************/
+ *
+ * Contributors:
+ *     IBM Corporation - initial API and implementation
+ *******************************************************************************/
 
-addRequiredLibraries {
-    configurations {
-	    	usrFeatures
-	    	usrEsa
-	    	features1
-	    	features2
-    }
-    
-    dependencies {
-      usrFeatures 'test.featureUtility_fat:userFeature:1.0@zip'
-      usrEsa 'test.featureUtility_fat:usertest.with.api:1.0@esa'
-      features1 'test.featureUtility_fat:Archive:1.0@zip'
-      features2 'test.featureUtility_fat:Archive:2.0@zip'
-    }    
-    
-    copy {
-        from configurations.usrFeatures
-        into "publish/repo/userFeature"
-    }
-    
-    copy {
-        from configurations.usrEsa
-        into "publish/features"
-    }
-    
-    copy {
-        from configurations.features1
-        into "publish/repo/archive1"
-    }
-    
-    copy {
-        from configurations.features2
-        into "publish/repo/archive2"
-    }
-
-    dependsOn copyTestContainers
+configurations {
+  usrFeatures
+  usrEsa
+  features1
+  features2
 }
+    
+dependencies {
+  usrFeatures 'test.featureUtility_fat:userFeature:1.0@zip'
+  usrEsa 'test.featureUtility_fat:usertest.with.api:1.0@esa'
+  features1 'test.featureUtility_fat:Archive:1.0@zip'
+  features2 'test.featureUtility_fat:Archive:2.0@zip'
+}
+
+task copyTestArtifacts {
+  doLast {
+    copy {
+      from configurations.usrFeatures
+      into "publish/repo/userFeature"
+    }
+    
+    copy {
+      from configurations.usrEsa
+      into "publish/features"
+    }
+    
+    copy {
+      from configurations.features1
+      into "publish/repo/archive1"
+    }
+    
+    copy {
+      from configurations.features2
+      into "publish/repo/archive2"
+    }
+  }
+}
+
+addRequiredLibraries.dependsOn copyTestArtifacts
+addRequiredLibraries.dependsOn copyTestContainers
