--- a/dev/com.ibm.ws.java11_fat/build.gradle
+++ b/dev/com.ibm.ws.java11_fat/build.gradle
@@ -1,21 +1,24 @@
 /*******************************************************************************
- * Copyright (c) 2019 IBM Corporation and others.
+ * Copyright (c) 2019, 2025 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/legal/epl-2.0/
- * 
+ *
  * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
  *     IBM Corporation - initial API and implementation
  *******************************************************************************/
 
-task copyKernelService(type: Copy) {
-  dependsOn ':com.ibm.ws.kernel.service:assemble'
-  from project(':com.ibm.ws.kernel.service').buildDir
-  into new File(autoFvtDir, 'lib')
+configurations {
+  requiredLibs {
+    transitive = false
+  }
 }
 
-addRequiredLibraries.dependsOn copyKernelService
+dependencies {
+  requiredLibs project(':com.ibm.ws.kernel.service')
+}
+
 addRequiredLibraries.dependsOn addDerby
