--- a/dev/io.openliberty.jakarta.validation.3.1_fat_tck/publish/tckRunner/tck/pom.xml
+++ b/dev/io.openliberty.jakarta.validation.3.1_fat_tck/publish/tckRunner/tck/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- 
-    Copyright (c) 2024 IBM Corporation and others. All rights reserved.
+    Copyright (c) 2024, 2025 IBM Corporation and others. All rights reserved.
     This program and the accompanying materials are made available under the 
     terms of the Eclipse Public License 2.0 which accompanies this distribution, 
     and is available at 
@@ -30,7 +30,7 @@
 		<jakarta.validation.tck.version>3.1.1</jakarta.validation.tck.version>
 		<jakarta.validation.version>3.1.0</jakarta.validation.version>
 		<arquillian.version>1.9.1.Final</arquillian.version>
-		<arquillian.liberty.managed.jakarta.version>2.1.1</arquillian.liberty.managed.jakarta.version>
+		<arquillian.liberty.managed.jakarta.version>2.1.3</arquillian.liberty.managed.jakarta.version>
 		<testng.version>7.9.0</testng.version>
 		<slf4j.version>2.0.6</slf4j.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
