--- a/dev/com.ibm.ws.security.saml.sso_fat.common/test-applications/samlclient.war/resources/WEB-INF/web.xml
+++ b/dev/com.ibm.ws.security.saml.sso_fat.common/test-applications/samlclient.war/resources/WEB-INF/web.xml
@@ -175,6 +175,24 @@
 		<url-pattern>/fat/sp_enc_aes128/snoop/*</url-pattern>
 	</servlet-mapping>
 
+	<servlet-mapping id="ServletMapping_Snoop_spAES128_ec">
+		<servlet-name>SnoopServlet</servlet-name>
+		<url-pattern>/fat/sp_enc_aes128_ec/snoop</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping id="ServletMapping_Snoop_spAES128_eca">
+		<servlet-name>SnoopServlet</servlet-name>
+		<url-pattern>/fat/sp_enc_aes128_ec/snoop/*</url-pattern>
+	</servlet-mapping>
+
+	<servlet-mapping id="ServletMapping_Snoop_spAES128_nosignature">
+		<servlet-name>SnoopServlet</servlet-name>
+		<url-pattern>/fat/sp_enc_aes128_no_sign/snoop</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping id="ServletMapping_Snoop_spAES128_nosignaturea">
+		<servlet-name>SnoopServlet</servlet-name>
+		<url-pattern>/fat/sp_enc_aes128_no_sign/snoop/*</url-pattern>
+	</servlet-mapping>
+
 	<servlet-mapping id="ServletMapping_Snoop_spAES192">
 		<servlet-name>SnoopServlet</servlet-name>
 		<url-pattern>/fat/sp_enc_aes192/snoop</url-pattern>
@@ -556,6 +574,10 @@
 			<url-pattern>/fat/spOP/snoop</url-pattern>
 			<url-pattern>/fat/spOP/snoop/*</url-pattern>
 			<url-pattern>/fat/sp_enc_aes128/snoop</url-pattern>
+			<url-pattern>/fat/sp_enc_aes128_ec/snoop</url-pattern>
+			<url-pattern>/fat/sp_enc_aes128_ec/snoop/*</url-pattern>
+			<url-pattern>/fat/sp_enc_aes128_no_sign/snoop</url-pattern>
+			<url-pattern>/fat/sp_enc_aes128_no_sign/snoop/*</url-pattern>
 			<url-pattern>/fat/sp_enc_aes128/snoop/*</url-pattern>
 			<url-pattern>/fat/sp_enc_aes192/snoop</url-pattern>
 			<url-pattern>/fat/sp_enc_aes192/snoop/*</url-pattern>
