--- a/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
+++ b/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
@@ -632,6 +632,106 @@
       <version>1.0.8</version>
     </dependency>
     <dependency>
+      <groupId>io.openliberty.net.shibboleth.utilities</groupId>
+      <artifactId>java-support</artifactId>
+      <version>8.4.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.openliberty.org.opensaml</groupId>
+      <artifactId>opensaml-core</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.openliberty.org.opensaml</groupId>
+      <artifactId>opensaml-messaging-api</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.openliberty.org.opensaml</groupId>
+      <artifactId>opensaml-messaging-impl</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.openliberty.org.opensaml</groupId>
+      <artifactId>opensaml-profile-api</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.openliberty.org.opensaml</groupId>
+      <artifactId>opensaml-profile-impl</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.openliberty.org.opensaml</groupId>
+      <artifactId>opensaml-saml-api</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.openliberty.org.opensaml</groupId>
+      <artifactId>opensaml-saml-impl</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.openliberty.org.opensaml</groupId>
+      <artifactId>opensaml-security-api</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.openliberty.org.opensaml</groupId>
+      <artifactId>opensaml-security-impl</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.openliberty.org.opensaml</groupId>
+      <artifactId>opensaml-soap-api</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.openliberty.org.opensaml</groupId>
+      <artifactId>opensaml-soap-impl</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.openliberty.org.opensaml</groupId>
+      <artifactId>opensaml-storage-api</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.openliberty.org.opensaml</groupId>
+      <artifactId>opensaml-storage-impl</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.openliberty.org.opensaml</groupId>
+      <artifactId>opensaml-xacml-api</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.openliberty.org.opensaml</groupId>
+      <artifactId>opensaml-xacml-impl</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.openliberty.org.opensaml</groupId>
+      <artifactId>opensaml-xacml-saml-api</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.openliberty.org.opensaml</groupId>
+      <artifactId>opensaml-xacml-saml-impl</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.openliberty.org.opensaml</groupId>
+      <artifactId>opensaml-xmlsec-api</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>io.openliberty.org.opensaml</groupId>
+      <artifactId>opensaml-xmlsec-impl</artifactId>
+      <version>4.3.2</version>
+    </dependency>
+    <dependency>
       <groupId>io.opentelemetry.instrumentation</groupId>
       <artifactId>opentelemetry-instrumentation-annotations-support</artifactId>
       <version>1.19.0-alpha</version>
@@ -1960,11 +2060,6 @@
       <groupId>net.shibboleth.utilities</groupId>
       <artifactId>java-support</artifactId>
       <version>7.5.1</version>
-    </dependency>
-    <dependency>
-      <groupId>net.shibboleth.utilities</groupId>
-      <artifactId>java-support</artifactId>
-      <version>8.4.2</version>
     </dependency>
     <dependency>
       <groupId>net.sourceforge.cssparser</groupId>
@@ -4368,18 +4463,8 @@
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
-      <artifactId>opensaml-core</artifactId>
-      <version>4.3.2</version>
-    </dependency>
-    <dependency>
-      <groupId>org.opensaml</groupId>
       <artifactId>opensaml-messaging-api</artifactId>
       <version>3.4.5</version>
-    </dependency>
-    <dependency>
-      <groupId>org.opensaml</groupId>
-      <artifactId>opensaml-messaging-api</artifactId>
-      <version>4.3.2</version>
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
@@ -4388,18 +4473,8 @@
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
-      <artifactId>opensaml-messaging-impl</artifactId>
-      <version>4.3.2</version>
-    </dependency>
-    <dependency>
-      <groupId>org.opensaml</groupId>
       <artifactId>opensaml-profile-api</artifactId>
       <version>3.4.5</version>
-    </dependency>
-    <dependency>
-      <groupId>org.opensaml</groupId>
-      <artifactId>opensaml-profile-api</artifactId>
-      <version>4.3.2</version>
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
@@ -4408,18 +4483,8 @@
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
-      <artifactId>opensaml-profile-impl</artifactId>
-      <version>4.3.2</version>
-    </dependency>
-    <dependency>
-      <groupId>org.opensaml</groupId>
       <artifactId>opensaml-saml-api</artifactId>
       <version>3.4.5</version>
-    </dependency>
-    <dependency>
-      <groupId>org.opensaml</groupId>
-      <artifactId>opensaml-saml-api</artifactId>
-      <version>4.3.2</version>
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
@@ -4428,18 +4493,8 @@
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
-      <artifactId>opensaml-saml-impl</artifactId>
-      <version>4.3.2</version>
-    </dependency>
-    <dependency>
-      <groupId>org.opensaml</groupId>
       <artifactId>opensaml-security-api</artifactId>
       <version>3.4.5</version>
-    </dependency>
-    <dependency>
-      <groupId>org.opensaml</groupId>
-      <artifactId>opensaml-security-api</artifactId>
-      <version>4.3.2</version>
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
@@ -4448,18 +4503,8 @@
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
-      <artifactId>opensaml-security-impl</artifactId>
-      <version>4.3.2</version>
-    </dependency>
-    <dependency>
-      <groupId>org.opensaml</groupId>
       <artifactId>opensaml-soap-api</artifactId>
       <version>3.4.5</version>
-    </dependency>
-    <dependency>
-      <groupId>org.opensaml</groupId>
-      <artifactId>opensaml-soap-api</artifactId>
-      <version>4.3.2</version>
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
@@ -4468,18 +4513,8 @@
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
-      <artifactId>opensaml-soap-impl</artifactId>
-      <version>4.3.2</version>
-    </dependency>
-    <dependency>
-      <groupId>org.opensaml</groupId>
       <artifactId>opensaml-storage-api</artifactId>
       <version>3.4.5</version>
-    </dependency>
-    <dependency>
-      <groupId>org.opensaml</groupId>
-      <artifactId>opensaml-storage-api</artifactId>
-      <version>4.3.2</version>
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
@@ -4488,18 +4523,8 @@
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
-      <artifactId>opensaml-storage-impl</artifactId>
-      <version>4.3.2</version>
-    </dependency>
-    <dependency>
-      <groupId>org.opensaml</groupId>
       <artifactId>opensaml-xacml-api</artifactId>
       <version>3.4.5</version>
-    </dependency>
-    <dependency>
-      <groupId>org.opensaml</groupId>
-      <artifactId>opensaml-xacml-api</artifactId>
-      <version>4.3.2</version>
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
@@ -4508,18 +4533,8 @@
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
-      <artifactId>opensaml-xacml-impl</artifactId>
-      <version>4.3.2</version>
-    </dependency>
-    <dependency>
-      <groupId>org.opensaml</groupId>
       <artifactId>opensaml-xacml-saml-api</artifactId>
       <version>3.4.5</version>
-    </dependency>
-    <dependency>
-      <groupId>org.opensaml</groupId>
-      <artifactId>opensaml-xacml-saml-api</artifactId>
-      <version>4.3.2</version>
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
@@ -4528,28 +4543,13 @@
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
-      <artifactId>opensaml-xacml-saml-impl</artifactId>
-      <version>4.3.2</version>
-    </dependency>
-    <dependency>
-      <groupId>org.opensaml</groupId>
       <artifactId>opensaml-xmlsec-api</artifactId>
       <version>3.4.5</version>
     </dependency>
     <dependency>
       <groupId>org.opensaml</groupId>
-      <artifactId>opensaml-xmlsec-api</artifactId>
-      <version>4.3.2</version>
-    </dependency>
-    <dependency>
-      <groupId>org.opensaml</groupId>
       <artifactId>opensaml-xmlsec-impl</artifactId>
       <version>3.4.5</version>
-    </dependency>
-    <dependency>
-      <groupId>org.opensaml</groupId>
-      <artifactId>opensaml-xmlsec-impl</artifactId>
-      <version>4.3.2</version>
     </dependency>
     <dependency>
       <groupId>org.osgi</groupId>
