--- a/dev/io.openliberty.data.internal_fat_jpa/build.gradle
+++ b/dev/io.openliberty.data.internal_fat_jpa/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     }
     
     hibernateJPA32 "org.hibernate.orm:hibernate-core:${hibernateVersion}", withoutJakartaAPI
+    hibernateJPA32 "org.hibernate.orm:hibernate-community-dialects:${hibernateVersion}", withoutJakartaAPI
+    hibernateJPA32 "org.hibernate.orm:hibernate-scan-jandex:${hibernateVersion}", withoutJakartaAPI
 }
 
 /*
