Update springboot gradle plugin use to 3.5.3
- Updates spring boot 2 and 3 test applications to use the 3.5.3
version of the gradle plugin.  For spring boot 2 there are updates
to be able to build a version 2 application with a version 3 plugin

--- a/dev/com.ibm.ws.springboot.fat20.webflux.app/build.gradle
+++ b/dev/com.ibm.ws.springboot.fat20.webflux.app/build.gradle
@@ -12,13 +12,11 @@
  ********************************************************************************/
 
 plugins {
-  id 'org.springframework.boot' version '2.7.1'
+  id 'org.springframework.boot' version '3.5.3'
 }
-apply from: '../wlp-gradle/subprojects/spring.gradle'
-def sv = springVersions[ '2.0' ]
+apply from: '../wlp-gradle/subprojects/springboot2.gradle'
 
 apply plugin: 'java'
-apply plugin: 'io.spring.dependency-management'
 
 group = 'com.ibm.ws.example.spring'
 version = '0.0.1-SNAPSHOT'
@@ -26,8 +24,6 @@ java {
   sourceCompatibility = 1.8
 }
 
-apply from: '../wlp-gradle/subprojects/maven-central-mirror.gradle'
-
 dependencies {
-  implementation('org.springframework.boot:spring-boot-starter-webflux') // + ':' + sv['springBoot'])
+  implementation('org.springframework.boot:spring-boot-starter-webflux')
 }
