--- a/dev/gradle.properties
+++ b/dev/gradle.properties
@@ -46,6 +46,9 @@ org.gradle.caching=false
 # See: https://docs.gradle.org/current/userguide/multi_project_configuration_and_execution.html#sec:parallel_execution
 org.gradle.parallel=true
 
+#See: https://docs.gradle.org/current/userguide/upgrading_major_version_9.html#reproducible_archives_by_default
+org.gradle.archives.use-file-system-permissions=true
+
 # Tweaks to better handle Artifactory connection flakiness.
 systemProp.org.gradle.internal.http.connectionTimeout=180000
 systemProp.org.gradle.internal.http.socketTimeout=180000
