--- a/dev/com.ibm.ws.springboot.fat20.app/build.gradle
+++ b/dev/com.ibm.ws.springboot.fat20.app/build.gradle
@@ -12,13 +12,10 @@
  ********************************************************************************/
 
 plugins {
-  id 'org.springframework.boot' version '2.7.1'
+  id 'org.springframework.boot' version '3.5.3'
 }
-apply from: '../wlp-gradle/subprojects/spring.gradle'
+apply from: '../wlp-gradle/subprojects/springboot2.gradle'
 def sv = springVersions[ '2.0' ]
-
-apply plugin: 'java'
-apply plugin: 'io.spring.dependency-management'
 
 group = 'com.ibm.ws.example.spring'
 version = '0.0.1-SNAPSHOT'
@@ -26,15 +23,13 @@ java {
   sourceCompatibility = 1.8
 }
 
-apply from: '../wlp-gradle/subprojects/maven-central-mirror.gradle'
-
 dependencies {
-  implementation('org.springframework.boot:spring-boot' + ':' + sv['springBoot.fat'])
-  implementation('org.springframework.boot:spring-boot-autoconfigure' + ':' + sv['springBoot.fat'])
+  implementation('org.springframework.boot:spring-boot')
+  implementation('org.springframework.boot:spring-boot-autoconfigure')
 
-  implementation('org.springframework.boot:spring-boot-starter-web') // + ':' + sv['springBoot']) // x
-  implementation('org.springframework.boot:spring-boot-starter-thymeleaf') // + ':' + sv['springBoot']) // x
-  implementation('org.springframework.boot:spring-boot-starter-security') // + ':' + sv['springBoot']) // x
+  implementation('org.springframework.boot:spring-boot-starter-web')
+  implementation('org.springframework.boot:spring-boot-starter-thymeleaf')
+  implementation('org.springframework.boot:spring-boot-starter-security')
 
   implementation('org.springframework:spring-beans' + ':' + sv['spring.fat'])
   implementation('org.springframework:spring-core' + ':' + sv['spring.fat'])
