--- a/dev/com.ibm.ws.springboot.fat20.programmatic.trans.app/build.gradle
+++ b/dev/com.ibm.ws.springboot.fat20.programmatic.trans.app/build.gradle
@@ -10,13 +10,10 @@
  ********************************************************************************/
 
 plugins {
-  id 'org.springframework.boot' version '2.7.1'
+  id 'org.springframework.boot' version '3.5.3'
+  id 'war'
 }
-apply from: '../wlp-gradle/subprojects/spring.gradle'
-def sv = springVersions[ '2.0' ]
-
-apply plugin: 'war'
-apply plugin: 'io.spring.dependency-management'
+apply from: '../wlp-gradle/subprojects/springboot2.gradle'
 
 group = 'com.ibm.ws.example.spring'
 version = '0.0.1-SNAPSHOT'
@@ -24,11 +21,9 @@ java {
   sourceCompatibility = 1.8
 }
 
-apply from: '../wlp-gradle/subprojects/maven-central-mirror.gradle'
-
 dependencies {
-  implementation('org.springframework.boot:spring-boot-starter-web') // + ':' + sv['springBoot'])
-  implementation('org.springframework.boot:spring-boot-starter-jdbc') // + ':' + sv['springBoot']) // x
+  implementation('org.springframework.boot:spring-boot-starter-web')
+  implementation('org.springframework.boot:spring-boot-starter-jdbc')
 
   providedCompile 'org.springframework.boot:spring-boot-starter-tomcat'
 }
