--- a/dev/com.ibm.ws.springboot.fat20.validation.app/build.gradle
+++ b/dev/com.ibm.ws.springboot.fat20.validation.app/build.gradle
@@ -10,22 +10,17 @@
  ********************************************************************************/
 
 plugins {
-  id 'org.springframework.boot' version '2.7.1'
+  id 'org.springframework.boot' version '3.5.3'
+  id 'war'
 }
 
-apply from: '../wlp-gradle/subprojects/spring.gradle'
-
-apply plugin: 'war'
-apply plugin: 'io.spring.dependency-management'
+apply from: '../wlp-gradle/subprojects/springboot2.gradle'
 
 group = 'com.ibm.ws.example.spring'
 version = '0.0.1-SNAPSHOT'
 java {
   sourceCompatibility = 1.8
 }
-
-apply from: '../wlp-gradle/subprojects/maven-central-mirror.gradle'
-
 
 dependencies {
   implementation('org.springframework.boot:spring-boot-starter-web')
