--- a/dev/io.openliberty.springboot.fat30.http.app/build.gradle
+++ b/dev/io.openliberty.springboot.fat30.http.app/build.gradle
@@ -12,12 +12,12 @@
  ********************************************************************************/
 
 plugins {
-  id 'org.springframework.boot' version '3.0.7'
+  id 'org.springframework.boot' version '3.5.3'
+  id 'war'
 }
 apply from: '../wlp-gradle/subprojects/spring.gradle'
 def sv = springVersions[ '3.0' ]
 
-apply plugin: 'war'
 apply plugin: 'io.spring.dependency-management'
 
 group = 'com.ibm.ws.example.spring'
