--- a/dev/io.openliberty.springboot.fat30.jms.app/build.gradle
+++ b/dev/io.openliberty.springboot.fat30.jms.app/build.gradle
@@ -11,10 +11,10 @@
 
 plugins {
   id 'org.springframework.boot' version '3.5.3'
+  id 'war'
 }
 apply from: '../wlp-gradle/subprojects/spring.gradle'
 
-apply plugin: 'war'
 apply plugin: 'io.spring.dependency-management'
 
 group = 'com.ibm.ws.example.spring'
