--- a/dev/io.openliberty.springboot.fat40.mbean.app/build.gradle
+++ b/dev/io.openliberty.springboot.fat40.mbean.app/build.gradle
@@ -13,11 +13,11 @@
 
 plugins {
   id 'org.springframework.boot' version '4.0.0-M3'
+  id 'war'
 }
 apply from: '../wlp-gradle/subprojects/spring.gradle'
 def sv = springVersions[ '4.0' ]
 
-apply plugin: 'war'
 apply plugin: 'io.spring.dependency-management'
 
 group = 'com.ibm.ws.example.spring'
