--- a/dev/io.openliberty.springboot.fat40.war.app/build.gradle
+++ b/dev/io.openliberty.springboot.fat40.war.app/build.gradle
@@ -14,10 +14,10 @@
 // https://plugins.gradle.org/plugin/org.springframework.boot
 plugins {
   id 'org.springframework.boot' version '4.0.0-M3'
+  id 'war'
 }
 apply from: '../wlp-gradle/subprojects/spring.gradle'
 
-apply plugin: 'war'
 apply plugin: 'io.spring.dependency-management'
 
 group = 'io.openliberty.example.spring'
