--- a/dev/io.openliberty.springboot.fat40.websocket.app/build.gradle
+++ b/dev/io.openliberty.springboot.fat40.websocket.app/build.gradle
@@ -14,9 +14,9 @@
 // https://plugins.gradle.org/plugin/org.springframework.boot
 plugins {
   id 'org.springframework.boot' version '4.0.0-M3'
+  id 'war'
 }
 apply from: '../wlp-gradle/subprojects/spring.gradle'
-apply plugin: 'war'
 
 apply plugin: 'java'
 apply plugin: 'io.spring.dependency-management'
