--- a/dev/wlp-gradle/subprojects/spring.gradle
+++ b/dev/wlp-gradle/subprojects/spring.gradle
@@ -1,10 +1,10 @@
 /*******************************************************************************
- * Copyright (c) 2023 IBM Corporation and others.
+ * Copyright (c) 2023, 2025 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/legal/epl-2.0/
- * 
+ *
  * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
@@ -61,4 +61,9 @@ ext {
              'spring.fat': '6.0.6',
              'springSecurity.fat': '6.0.3' ]
   ]
+}
+
+if (project.plugins.hasPlugin('war')) {
+  // Do not also create the non boot war
+  tasks.war.enabled = false
 }
