past errors relating to dependencies

--- a/dev/com.ibm.ws.cdi.third.party_fat/build.gradle
+++ b/dev/com.ibm.ws.cdi.third.party_fat/build.gradle
@@ -70,12 +70,13 @@ dependencies {
     'org.elasticsearch.client:elasticsearch-rest-client:5.6.8',
     'org.elasticsearch.client:elasticsearch-rest-client-sniffer:5.6.8',
     'org.hibernate.common:hibernate-commons-annotations:5.1.0.Final',
-    'org.hibernate.orm:hibernate-core:6.6.23.Final',
+    'org.hibernate.orm:hibernate-core:7.0.9.Final',
     'org.hibernate:hibernate-search-elasticsearch:5.11.2.Final',
     'org.hibernate:hibernate-search-engine:5.11.2.Final',
     'org.hibernate:hibernate-search-orm:5.11.2.Final',
-    'org.jboss.logging:jboss-logging:3.3.2.Final',
-    'net.bytebuddy:byte-buddy:1.10.0',
+    'org.jboss.logging:jboss-logging:3.6.0.Final',
+    'org.hibernate.models:hibernate-models:1.0.1',
+    'net.bytebuddy:byte-buddy:1.16.1',
     'com.fasterxml:classmate:1.5.0',
     'javassist:javassist:3.12.1.GA',
     'antlr:antlr:2.7.7'
