add ECDSA signature tests with signatureMethodAlgorithm SHA256

--- a/dev/com.ibm.ws.security.saml.sso_fat.common/test-applications/samlclient.war/resources/WEB-INF/web.xml
+++ b/dev/com.ibm.ws.security.saml.sso_fat.common/test-applications/samlclient.war/resources/WEB-INF/web.xml
@@ -193,6 +193,24 @@
 		<url-pattern>/fat/sp_enc_aes128_no_sign/snoop/*</url-pattern>
 	</servlet-mapping>
 
+	<servlet-mapping id="ServletMapping_Snoop_rsaSP_ecdsaIDP">
+		<servlet-name>SnoopServlet</servlet-name>
+		<url-pattern>/fat/sp_enc_rsaSP_ecdsaIDP/snoop</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping id="ServletMapping_Snoop_rsaSP_ecdsaIDPa">
+		<servlet-name>SnoopServlet</servlet-name>
+		<url-pattern>/fat/sp_enc_rsaSP_ecdsaIDP/snoop/*</url-pattern>
+	</servlet-mapping>
+
+	<servlet-mapping id="ServletMapping_Snoop_ecdsaSP_rsaIDP">
+		<servlet-name>SnoopServlet</servlet-name>
+		<url-pattern>/fat/sp_enc_ecdsaSP_rsaIDP/snoop</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping id="ServletMapping_Snoop_ecdsaSP_rsaIDPa">
+		<servlet-name>SnoopServlet</servlet-name>
+		<url-pattern>/fat/sp_enc_ecdsaSP_rsaIDP/snoop/*</url-pattern>
+	</servlet-mapping>
+
 	<servlet-mapping id="ServletMapping_Snoop_spAES192">
 		<servlet-name>SnoopServlet</servlet-name>
 		<url-pattern>/fat/sp_enc_aes192/snoop</url-pattern>
@@ -578,6 +596,12 @@
 			<url-pattern>/fat/sp_enc_aes128_ec/snoop/*</url-pattern>
 			<url-pattern>/fat/sp_enc_aes128_no_sign/snoop</url-pattern>
 			<url-pattern>/fat/sp_enc_aes128_no_sign/snoop/*</url-pattern>
+
+			<url-pattern>/fat/sp_enc_rsaSP_ecdsaIDP/snoop</url-pattern>
+			<url-pattern>/fat/sp_enc_rsaSP_ecdsaIDP/snoop/*</url-pattern>
+			<url-pattern>/fat/sp_enc_ecdsaSP_rsaIDP/snoop</url-pattern>
+			<url-pattern>/fat/sp_enc_ecdsaSP_rsaIDP/snoop/*</url-pattern>
+
 			<url-pattern>/fat/sp_enc_aes128/snoop/*</url-pattern>
 			<url-pattern>/fat/sp_enc_aes192/snoop</url-pattern>
 			<url-pattern>/fat/sp_enc_aes192/snoop/*</url-pattern>
