Add depends that is needed when running with gradle 9

--- a/dev/com.ibm.ws.security.registry.basic_fat/build.gradle
+++ b/dev/com.ibm.ws.security.registry.basic_fat/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     project(':com.ibm.ws.security.registry_test.servlet')
 }
 
+jar.dependsOn ':com.ibm.ws.security.registry_test.servlet:assemble'
+
 autoFVT.dependsOn ':com.ibm.ws.security.registry_test.servlet:assemble'
 autoFVT.dependsOn ':com.ibm.ws.webcontainer.security_test.servlets:assemble'
 
