--- a/dev/com.ibm.ws.security.wim.adapter.ldap_fat.krb5.1/build.gradle
+++ b/dev/com.ibm.ws.security.wim.adapter.ldap_fat.krb5.1/build.gradle
@@ -26,6 +26,8 @@ dependencies {
 
 addRequiredLibraries.dependsOn copyTestContainers
 
+jar.dependsOn ':com.ibm.ws.security.registry_test.servlet:assemble'
+
 autoFVT.dependsOn ':com.ibm.ws.security.registry_test.servlet:assemble'
 
 autoFVT {
