--- a/dev/com.ibm.ws.security.wim.adapter.ldap_fat.2/build.gradle
+++ b/dev/com.ibm.ws.security.wim.adapter.ldap_fat.2/build.gradle
@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2022, 2024 IBM Corporation and others.
+ * Copyright (c) 2022, 2025 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -33,6 +33,8 @@ dependencies {
     project(':com.ibm.ws.webcontainer.security_test.servlets').
     project(':com.ibm.ws.security.wim.adapter.ldap_fat')
 }
+
+jar.dependsOn ':com.ibm.ws.security.registry_test.servlet:assemble'
 
 autoFVT.dependsOn ':com.ibm.ws.security.registry_test.custom:assemble'
 autoFVT.dependsOn ':com.ibm.ws.security.registry_test.servlet:assemble'
