--- a/dev/com.ibm.ws.security.wim.adapter.ldap_fat.krb5.2/build.gradle
+++ b/dev/com.ibm.ws.security.wim.adapter.ldap_fat.krb5.2/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     project(':com.ibm.ws.org.slf4j.jdk14')
 }
 
+jar.dependsOn ':com.ibm.ws.security.registry_test.servlet:assemble'
+
 autoFVT.dependsOn ':com.ibm.ws.security.registry_test.servlet:assemble'
 
 autoFVT {
