--- a/dev/com.ibm.ws.security.wim.registry_fat/build.gradle
+++ b/dev/com.ibm.ws.security.wim.registry_fat/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     'com.unboundid:unboundid-ldapsdk:5.1.0',
     project(':com.ibm.ws.com.unboundid')
 }
+jar.dependsOn ':com.ibm.ws.security.registry_test.servlet:assemble'
 
 autoFVT.dependsOn ':com.ibm.ws.security.registry_test.custom:assemble'
 autoFVT.dependsOn ':com.ibm.ws.security.registry_test.servlet:assemble'
