--- a/dev/io.openliberty.checkpoint_fat_springboot_data/build.gradle
+++ b/dev/io.openliberty.checkpoint_fat_springboot_data/build.gradle
@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2024 IBM Corporation and others.
+ * Copyright (c) 2024, 2025 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -41,6 +41,7 @@ def appDefs =
   [ [ 'io.openliberty.checkpoint.springboot.fat30.data.app', '.war' ] ]
 
 appDefs.each { appDef ->
+  jar.dependsOn ':' + appDef[0] + ':build'
   autoFVT.dependsOn ':' + appDef[0] + ':build'
 }
 
